<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="br.gov.sp.etec.agenda.ContatoActivity">

    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="495dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp"
        android:weightSum="1">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@mipmap/ic_launcher_round"
            android:layout_weight="0.35" />

        <TextView
            android:id="@+id/textViewNome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.03"
            android:text="TextView"
            tools:text="@string/nome" />

        <EditText
            android:id="@+id/editTextNome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.03"
            android:ems="10"
            android:hint="@string/dica_nome"
            android:inputType="textPersonName"
            android:text="Name" />

        <TextView
            android:id="@+id/textViewEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.03"
            android:text="TextView"
            tools:text="@string/email" />

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.03"
            android:ems="10"
            android:hint="@string/dica_email"
            android:inputType="textEmailAddress" />

        <TextView
            android:id="@+id/textViewTelefone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.03"
            android:text="TextView"
            tools:text="@string/dica_celular" />

        <EditText
            android:id="@+id/editTextTelefone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.03"
            android:ems="10"
            android:hint="@string/dica_telefone"
            android:inputType="phone" />

        <TextView
            android:id="@+id/textViewCelular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.03"
            android:text="TextView"
            tools:text="@string/celular" />

        <EditText
            android:id="@+id/editTextCelular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.03"
            android:ems="10"
            android:hint="@string/dica_celular"
            android:inputType="phone" />

        <Button
            android:id="@+id/btnSalvar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.20"
            android:onClick="salvar"
            android:text="Salvar" />

        <Button
            android:id="@+id/btnExcluir"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.35"
            android:onClick="excluir"
            android:text="Excluir"
            android:visibility="invisible" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>
